# helix

./: .envrc  Cargo.toml  languages.toml
book/src/: commands.md  editor.md  languages.md  remapping.md  themes.md
helix-config/: Cargo.toml
helix-config/src/: config.rs
helix-core/: Cargo.toml
helix-core/src/: diff.rs  lib.rs  movement.rs  object.rs  register.rs  search.rs  selection.rs  syntax.rs  textobject.rs
helix-core/src/diff/: diff_provider.rs  line_cache.rs  worker.rs
helix-core/src/movement/: test.rs
helix-core/src/syntax/: debug.rs  deserialize_utils.rs
helix-core/src/textobject/: test.rs
helix-dap/src/: client.rs
helix-loader/: Cargo.toml  build.rs
helix-loader/src/: grammar.rs  lib.rs  repo_paths.rs
helix-lsp/src/: client.rs
helix-server/: Cargo.toml
helix-server/src/: buffer.rs
helix-term/: Cargo.toml  build.rs
helix-term/src/: application.rs  commands.rs  compositor.rs  health.rs  help.rs  job.rs  keymap.rs  main.rs
helix-term/src/commands/: dap.rs  lsp.rs  typed.rs
helix-term/src/keymap/: default.rs  keymaps.rs  macros.rs  (+1 more)
helix-treesitter/: Cargo.toml  build.rs
helix-treesitter/src/: grammar.rs  lib.rs  main.rs
helix-view/: Cargo.toml
helix-view/src/: UITree.rs  buffer.rs  buffer_mirror.rs  buffer_view.rs  command.rs  config.rs  document.rs  editor.rs  event_handler.rs  gutter.rs  info.rs  input.rs  jump.rs  jump_list.rs  keymap.rs  lib.rs  lists.rs  macros.rs  mode.rs  theme.rs  tree.rs  ui_tree.rs  view.rs
nix/: flake.nix  grammars.nix
xtask/src/: docgen.rs  helpers.rs  main.rs  querycheck.rs  themelint.rs
(+32 files in other folders)
