[workspace]
members = [
  "helix-core",
  "helix-dap",
  "helix-loader",
  "helix-lsp",
  "helix-server",
  "helix-term",
  "helix-treesitter",
  "helix-tui",
  "helix-vcs",
  "helix-view",
  "xtask",
]

default-members = [
  "helix-term"
]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3
