[package]
name = "helix-treesitter"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "hx-treesitter"
path = "src/main.rs"

[dependencies]
helix-loader = { version = "0.6", path = "../helix-loader" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.20"
# TODO: these two should be on !wasm32 only

# cloning/compiling tree-sitter grammars
cc = { version = "1" }
threadpool = { version = "1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.7"
